--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^2.6.2",
     "errorhandler": "^1.5.1",
