--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-error-handler": "^1.1.0",
     "express-session": "^1.16.2",
+    "fomantic-ui": "^2.7.7",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongodb": "^3.3.0",
