--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -26,6 +27,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0"
   },
