--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0"
