--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-kakao": "0.0.5",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0"
   },
