--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-entities": "^1.2.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.10",
     "morgan": "~1.9.0",
