--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "passport-kakao": "0.0.5",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
+    "popper.js": "^1.15.0",
     "serve-static": "^1.14.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "startbootstrap-simple-sidebar": "^5.1.1"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
