--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.10",
     "morgan": "~1.9.0",
